--- a/AutomataFinito1.html
+++ b/AutomataFinito1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -911,6 +911,6 @@
 			};	
 	}
 	</script>
-
+	<footer>Este sitio fue creado por Cristhian Carpio; Derechos Reservados &copy; 2016-2017.</footer>
 </body>
 </html>
